# OpenGym

./: .gitignore  LayoutEnv.py  act_space.py  exxternal_dependency.txt  main.py  obs_space.py  recieved_data.xml  run_model.py  test_package.py  tytyty.xml  utils.py
layoutenv_pkg/: README.md  pyproject.toml
layoutenv_pkg/src/configs/: config.json  config_env2.json  log_config.yaml
layoutenv_pkg/src/layoutenv/: __init__.py  logger_module.py
layoutenv_pkg/src/layoutenv/Simulator/: attained_index.py  curves.py  fdsf.py  flooding.py  simulator.py  survivability.py
layoutenv_pkg/src/layoutenv/cli_scripts/: PPO.py  PPO_shaped_reward.py  SAC.py  TD3 copy.py  TD3.py  _test.py  td3_run_4.py
layoutenv_pkg/src/layoutenv/data_handlers/: __init__.py  results.py
layoutenv_pkg/src/layoutenv/envs/: LayoutEnv_0.py  LayoutEnv_0_copy.py  LayoutEnv_1.py  __init__.py  empty_layout.py  fill_layout.py  layout_script.py  sb_env_v3.py  sb_layout_env.py  sb_layout_env__.py
layoutenv_pkg/src/layoutenv/utils/: __init__.py  _old.py  conversions.py  copy_machine.py  layout_helpers.py  list_man.py  rl_env_func.py  start_process.py
layoutenv_pkg/test/: check_env.py  done_signal.py  hello_world.py  logging_test.py  random_seed.py  random_test.py  render.py  run_env.py  run_trained_model.py  scaling.py  spaces.py  t3ermination.py
logs_PPO_1/: events.out.tfevents.1683383675.PC55.8004.0  events.out.tfevents.1683389227.PC55.8004.1  events.out.tfevents.1683394740.PC55.8004.2  events.out.tfevents.1683400097.PC55.8004.3  events.out.tfevents.1683405660.PC55.8004.4  (+20 more)
training/: A2C.py  A2C_v1.py  (+2 more)
(+691 files in other folders)
