[build-system]
requires = ["setuptools>=61.0", "wheel==0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "layoutenv"
version = "0.0.1"
authors = [
  { name="Dorus Boogaard", email="dorus.boogaard@outlook.com" },
]
description = "a package that contains a Reinforcement learning environment for the ship stability software Pias."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "gymnasium>=0.27.0",
  "stable-baselines3>=1.7.0",
  "pandas",
  "PyYAML",
  "psutil",
  "tensorboard"


]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Dorus-coder/ThesisResearch"


[tools.setuptools.packages]
find = {}

[project.scripts]
ppo = "layoutenv.cli_scripts:PPO"
ppo_shaped = "layoutenv.cli_scripts:PPO_shaped_reward"





